CSS: correction, top-menu visited, alignement du Slogan, filtres

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 body h1 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bolder;
+    margin: 25px auto 10px;
 }
 body h3 {
     
@@ -29,8 +30,8 @@ body a {
     height: auto;
     text-decoration: none;
     color: black;
-    
 }
+
 #bloc_page {
     width: inherit;
     margin: 3em;
@@ -64,20 +65,31 @@ header {
 #top_menu li {
     margin-right: 3em;    
 }
+.inscription {
+    color: #0065FC;
+}
 #top_menu a {    
     text-decoration: none; 
     padding-top: 3.1em;    
+}
+#top_menu a:link {
+    color:#0065FC;
+}
+#top_menu a:visited {
+    color: purple;
 }
 #top_menu a:hover {
     color: #0065FC;
     border-top: 3px solid #0065FC;
 }
-.liens-menu a {
-    color: #000000;
+#top_menu a:active {
+    color:red;
 }
-.inscription {
-    color: #0065FC;
+#recherche p {
+    
+    margin: 10px auto 25px;
 }
+
 
 /*---------------------------------------------header recherche---------------------------*/
 
@@ -128,7 +140,8 @@ header {
     list-style-type: none;     
 }
 #filtres li {
-    margin-right: 5em;
+    cursor: pointer;
+    margin: 0 0.5em;
     padding-right: 15px;
     border: 2px solid grey; 
     border-radius: 40px;
@@ -154,7 +167,10 @@ header {
 }
 .fa-info-circle {
     color: #0065FC;
-    padding: 0.8em;
+    margin-top: 5px;
+}
+#infos_nombre_logements p {
+    margin: 0;
 }
 
 /*--------------------------------------corps hebergement à Marseille-----------------------------*/
@@ -163,6 +179,11 @@ section {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+section img {
+    width: 100%;
+  
+    background-size: cover;
 }
 article {
     background-color: #F2F2F2;
@@ -211,51 +232,31 @@ article a {
     position: relative;
 }
 .carte {
-   
+    display: flex;
+    flex-direction: row;
     border-radius: 20px;
     border: 5px solid white;
     position: relative;
-    height: 300px;
-    width: 350px;
+    width: 35%;
+    height: auto;
     box-shadow: 0 4px 4px #8d8987;   
+    justify-content: center;
+    
 }
 
 /*--------------------------corps hebergement à Marseille gestion de resize images-----------------*/
 
-.cannebiere {
-    background: url(img/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg) no-repeat;
-    background-size: 150%;
-    background-position-y: -4em;
-    background-position-x: -4em;
+#hebergement {
+    display: flex;
+    flex-direction: row;
+    background-size: cover;
 }
-.hotel-du-port {
-    background: url(img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg) no-repeat;
-    background-size: 150%;
-    background-position-y: -8em;
-    background-position-x: -4em;
+#hebergement img {
+    width: 100%;
 }
-.hotel-des-mouettes {
-    background: url(img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg) no-repeat;
-    background-size: 150%;
-    background-position-y: -8em;
-    background-position-x: -9em;
-}
-.hotel-de-la-mer {
-    background: url(img/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg) no-repeat;
-    background-size: 100%;
-    background-position-y: -6em;
-    
-}
-.auberge-du-panier {
-    background: url(img/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg) no-repeat;
-    background-size: 150%;
-    background-position-y: -3em;
-}
-.hotel-chez-amina {
-    background: url(img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg) no-repeat;
-    background-size: 100%;
-    background-position-y: -13em;
-}
+
+
+
 
 /*-------------------------------------Bloc les plus populaire-------------------------------*/
 
@@ -338,13 +339,12 @@ aside {
 .carte_activite {
     background-color: violet;
     max-width: 100%;
-    height: 100%;
     border-radius: 20px;
     box-shadow: 0 4px 4px #8d8987;  
 }
 
 /*-----------------------------------------Titre activités------------------------------------*/
-
+/*
 #vieux_port h3 {
     top: 18em;
     padding-bottom: 2.1em;
@@ -400,16 +400,14 @@ aside {
     padding-top: 1em;
     padding-left: 1em; 
 }
-
+*/
 /*--------------------------------------Acitivé à Marseille images----------------------------*/
 
-#vieux_port {
-    grid-column-start: 1/2;
-    grid-row: 1/3;
-    position: relative;
-    background: url(img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg) no-repeat;
-    background-size:  auto;
+.carte_activite img {
+    
+    
 }
+/*images
 #fort_pomegues {
     position: relative;
     background: url(img/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg) no-repeat;
@@ -443,6 +441,7 @@ aside {
     background-size: auto;
     background-position-y: -4em;
 }
+*/
 
 /*--------------------------------------------------footer---------------------------------------*/
 
